# blockcaptain-eng

./: .gitignore  .pre-commit-config.yaml  README.md  dev-requirements.txt  mypy.ini  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: build-dist.yml
eng/: build_zipapp.sh
src/blkcapteng/: __main__.py  commands.py  validation.py
