[metadata]
name = blkcapteng
version = 0.1.0
description = The CLI for BlockCaptain development and testing.
author = Will Brown
author_email = 5326080+wpbrown@users.noreply.github.com
license = mit
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github.com/blockcaptain/blockcaptain-eng
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python

[options]
packages = find:
package_dir =
    =src
install_requires =
    typer
    coolname
    pylxd

[options.entry_points]
console_scripts =
    blkcapteng = blkcapteng.__main__:main

[options.packages.find]
where = src

[flake8]
max-line-length = 110
extend-ignore = E203, W503

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 110